<resources>
    <string name="app_name">LQ84i</string>
    <string name="snackbarmessage">La aplicación está calculando los valores, por favor espera</string>
    <string name="acerca_de">Acerca de</string>
    <string name="settings">Configuración</string>
    <string name="callState">Estado de la llamada: </string>
    <string name="conectionState">Estado de la conexión: </string>
    <string name="serviceState">Estado del servicio: </string>
    <string name="gps_location">Localización GPS: </string>
    <string name="cell_location">Localización celda: </string>
    <string name="downloadSpeed">Velocidad de descarga: </string>
    <string name="uploadSpeed">Velocidad de subida: </string>
    <string name="signal_level">Nivel de Señal: </string>
    <string name="data">Datos: </string>
    <string name="preference_timeupdate">¿Cada cuanto tiempo quieres que actualice los datos la app? (En segundos, no introducir decimales por favor)</string>
    <string name="preference_distanceupdate">¿Cada cuanta distancia quieres que actualize los datos la app? (En metros, no introducir decimales por favor)</string>
    <string name="authors">Autores:\n\n\t    Daniel García Martín\n\t    Juan Luis Herrera González\n\nApp realizada para la Asignatura de Redes de Comunicaciones Móviles y Multimedia</string>
    <string name="close">Cerrar</string>
    <string name="downlink">Descarga</string>
    <string name="uplink">Subida</string>
    <string name="snackbar_updateddata">Datos Actualizados</string>
    <string name="time_downlink">Tiempo de Descarga: </string>
    <string name="time_uplink">Tiempo de Subida: </string>
    <string name="packet_downlink">Paquetes perdidos en descarga: </string>
    <string name="packet_uplink">Paquetes perdidos en subida: </string>
    <string name="totalpackets_downlink">Paquetes totales en descarga: </string>
    <string name="totalpackets_uplink">Paquetes totales en subida: </string>
    <string name="rtt_downlink">RTT descarga: </string>
    <string name="rtt_uplink">RTT subida: </string>
    <string name="jitter_downlink">Jitter descarga: </string>
    <string name="jitter_uplink">Jitter subida: </string>
    <string name="reload">Recargar valores</string>
    <string name="uplink_delay">Retardo de subida: </string>
    <string name="downlink_delay">Retardo de descarga: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="device_id">ID Dispositivo: </string>
    <string name="phone_num">Número de teléfono: </string>
    <string name="software_ver">Versión de software: </string>
    <string name="op_name">Nombre de operador: </string>
    <string name="sim_country_code">Código de país (SIM): </string>
    <string name="sim_op">Operador (SIM): </string>
    <string name="sim_sn">Número de serie (SIM): </string>
    <string name="sub_id">ID de suscriptor: </string>
    <string name="network_type">Tipo de red móvil: </string>
    <string name="voice_radio_type">Tipo de radio voz: </string>
    <string name="update">Actualizar</string>
    <string name="calculate_speed">Calcular velocidades</string>
    <string name="data_saved">¡Datos guardados con éxito!</string>
    <string name="error_saving">No se pudo guardar</string>
    <string name="listener_pref">Variación de medición</string>
    <string name="listener_pref_desc">Elige con las variaciones de qué se realizan mediciones (requiere reinicio)</string>
    <string name="snackbar_2">Recalculando valores...</string>
</resources>
